@@ -1,3 +1,6 @@
+3/21/2014
+- implement logout function (and cache delete)
+
 3/19/2014
 - make all caching (incl. shm) vhost specific
 
